# content-agent

./: .gitignore  CHANGELOG_RULE_SEARCH_FIXES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  UNIFIED_RULE_DISCOVERY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: BUILD_ARTIFACTS_FEATURE.md  BUILD_ARTIFACTS_USAGE.md  COMPLIANCEASCODE_REFERENCE.md  COMPLIANCE_AUDIT.md  COMPLIANCE_SUMMARY.md  api_reference.md  architecture.md
examples/: build_artifacts_example.py  claude_desktop_config.json  claude_desktop_managed.json  unified_discovery_comparison.py
src/cac_mcp_server/: __main__.py
src/cac_mcp_server/config/: __init__.py  defaults.yaml  settings.py
src/cac_mcp_server/core/: __init__.py
src/cac_mcp_server/core/discovery/: __init__.py  build_artifacts.py  controls.py  products.py  profiles.py  rules.py  templates.py
src/cac_mcp_server/core/integration/: __init__.py  content_manager.py
src/cac_mcp_server/core/scaffolding/: __init__.py  ai_generator.py  rule_generator.py  template_generator.py  validators.py
src/cac_mcp_server/models/: __init__.py  build.py  profile.py  test.py
src/cac_mcp_server/server/: __init__.py  mcp_server.py
src/cac_mcp_server/server/handlers/: __init__.py  resources.py  tools.py
src/content_agent/: __init__.py  __main__.py
src/content_agent/config/: __init__.py  defaults.yaml  settings.py
src/content_agent/core/: __init__.py
src/content_agent/core/ai/: __init__.py  claude_client.py  requirement_extractor.py  rule_mapper.py
src/content_agent/core/discovery/: __init__.py  build_artifacts.py  controls.py  products.py  profiles.py  rules.py  templates.py
src/content_agent/core/integration/: __init__.py  content_manager.py  ssg_modules.py
src/content_agent/core/parsing/: __init__.py  base_parser.py  html_parser.py  markdown_parser.py  pdf_parser.py  text_parser.py
src/content_agent/core/review/: __init__.py  mapping_reviewer.py  text_comparator.py
src/content_agent/core/scaffolding/: __init__.py  control_generator.py  control_validators.py  rule_generator.py  template_generator.py  validators.py
src/content_agent/models/: __init__.py  build.py  control.py  product.py  profile.py  rule.py  test.py
src/content_agent/server/: __init__.py  mcp_server.py
src/content_agent/server/handlers/: __init__.py  prompts.py  resources.py  tools.py
tests/: README.md  conftest.py
tests/integration/: test_control_workflow.py  test_resources.py  test_tools.py
tests/unit/: test_config.py  test_control_generator.py  test_control_models.py  test_control_validators.py  test_models.py  test_parsers.py  test_validators.py
